--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "moment": "^2.30.1",
+    "moment-duration-format": "^2.3.2",
     "vue": "^3.4.21"
   },
   "devDependencies": {
